--- a/.jshintrc
+++ b/.jshintrc
@@ -26,6 +26,7 @@
         "it": false,
         "xit": false,
         "module": false,
+        "simplify": false,
         "L": false,
         "_": false,
 	"zxcvbn": false
