--- a/package.json
+++ b/package.json
@@ -16,13 +16,7 @@
     "planner",
     "GPS"
   ],
-  "resolutions": {
-    "engine.io": ">=4.1.2",
-    "follow-redirects": ">=1.14.7",
-    "json-schema": ">=0.4.0",
-    "markdown-it": ">=12.3.2",
-    "marked": ">=4.0.10"
-  },
+  "resolutions": {},
   "devDependencies": {
     "adm-zip": "^0.5.5",
     "copyfiles": "^2.1.1",
