Replace jshint with eslint

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "adm-zip": "^0.5.5",
     "copyfiles": "^2.1.1",
     "cssmin": "^0.4.3",
+    "eslint": "^8.7.0",
     "jasmine-core": "^3.6.0",
-    "jshint": "^2.9.1",
     "karma": "6.3.4",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
@@ -99,7 +99,7 @@
     "update-index-async-prod": "node -e \"const shell = require('shelljs'); shell.sed('-i', /^\\s+\\'js\\/.*\\.js\\',?\\s*$/, '', 'dist/app/index-async.html'); shell.sed('-i', /\\/\\/ \\'trip.min.js\\'/, '\\'trip.min.js\\'', 'dist/app/index-async.html');\"",
     "env": "env",
     "clean": "rimraf dist",
-    "lint": "jshint app/js/*.js app/js/**/*.js test/**/*.js",
+    "lint": "eslint app/js/*.js app/js/**/*.js test/**/*.js",
     "update-version": "node -e \"const pkg=require('./package.json'); require('shelljs').sed('-i', /^\\s*\\.value\\(\\'version\\', \\'.*\\'\\)/, '.value(\\'version\\', \\'' + pkg.version + '\\')', './app/js/version/version.js');\"",
     "prebuild": "mkdirp dist/app/partials --mode=0775 && mkdirp dist/app/css --mode=0775",
     "build": "$npm_execpath run update-version && $npm_execpath run build:scripts && $npm_execpath run build:css",
