--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -85,6 +85,7 @@
     "test-single-run": "karma start test/karma.conf.js  --single-run",
     "preupdate-webdriver": "$npm_execpath install",
     "update-webdriver-chrome-XX.x.xxxx.xx": "webdriver-manager update --versions.chrome=XX.x.xxxx.xx",
+    "update-webdriver-97": "webdriver-manager update --versions.chrome=97.0.4692.99",
     "update-webdriver-90": "webdriver-manager update --versions.chrome=90.0.4430.212",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "$npm_execpath run update-webdriver-90",
