--- a/package.json
+++ b/package.json
@@ -85,10 +85,11 @@
     "test-single-run": "karma start test/karma.conf.js  --single-run",
     "preupdate-webdriver": "$npm_execpath install",
     "update-webdriver-chrome-XX.x.xxxx.xx": "webdriver-manager update --versions.chrome=XX.x.xxxx.xx",
+    "update-webdriver-99": "webdriver-manager update --versions.chrome=99.0.4844.51",
     "update-webdriver-97": "webdriver-manager update --versions.chrome=97.0.4692.99",
     "update-webdriver-90": "webdriver-manager update --versions.chrome=90.0.4430.212",
     "update-webdriver": "webdriver-manager update",
-    "preprotractor": "$npm_execpath run update-webdriver-97",
+    "preprotractor": "$npm_execpath run update-webdriver-99",
     "protractor": "protractor test/protractor.conf.js",
     "dist-update-index-async": "node -e \"const shell = require('shelljs'); shell.sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, shell.sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'dist/app/index-async.html');\"",
     "update-index-async": "node -e \"const shell = require('shelljs'); shell.sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, shell.sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'app/index-async.html');\"",
