--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "simplify-js": "1.2.4",
     "socket.io-client": "^3.1.0",
     "ui-leaflet": "git+https://github.com/frankdean/ui-leaflet.git#v1.0.4-rc.2",
-    "ui-leaflet-draw": "0.0.5",
+    "ui-leaflet-draw": "https://github.com/frankdean/ui-leaflet-draw#65f7d8c403990b3c24a1bcea9a3a1f0257be9529",
     "zxcvbn": "^4.4.2"
   },
   "engines": {
