--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cssmin": "^0.4.3",
     "eslint": "^8.7.0",
     "jasmine-core": "^3.6.0",
-    "karma": "~6.3.12",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
